--- a/jscomp/belt_native/Makefile
+++ b/jscomp/belt_native/Makefile
@@ -93,7 +93,12 @@ INCLUDES=
 BS_FLAGS=  $(BS_COMMON_FLAGS)
 COMPFLAGS += $(BS_FLAGS) -g -w +3-40-49 -warn-error A -bin-annot -ppx $(BELT_BSPPX)
 
-all: $(RUNTIME)
+
+all: 
+	make files
+	make main
+
+main: $(RUNTIME)
 	$(COMPILER) -a -o lib.cmxa $(OBJECT_FILES)
 
 files: $(addprefix ../others/, $(addsuffix .ml, $(filter-out $(GENERATED_SOURCE_LIST), $(SOURCE_LIST)))) $(addprefix ../others/, $(addsuffix .mli, $(filter-out js_math belt $(GENERATED_SOURCE_LIST), $(SOURCE_LIST))))
@@ -141,79 +146,79 @@ clean::
 
 ifndef BS_RELEASE_BUILD
 belt_HashSetString.ml: ../others/hashset.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_HashSetInt.ml: ../others/hashset.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_HashSetString.mli: ../others/hashset.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_HashSetInt.mli: ../others/hashset.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_HashMapString.ml: ../others/hashmap.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_HashMapInt.ml: ../others/hashmap.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_HashMapString.mli: ../others/hashmap.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_HashMapInt.mli: ../others/hashmap.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_MapString.ml: ../others/map.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_MapInt.ml: ../others/map.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_MapString.mli: ../others/map.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_MapInt.mli: ../others/map.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_MutableMapString.mli: ../others/mapm.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_MutableMapInt.mli: ../others/mapm.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_MutableMapString.ml: ../others/mapm.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_MutableMapInt.ml: ../others/mapm.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_internalMapInt.ml : ../others/internal_map.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_internalMapString.ml : ../others/internal_map.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_internalSetInt.ml: ../others/internal_set.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_internalSetString.ml: ../others/internal_set.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 
 belt_SetInt.ml: ../others/set.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_SetString.ml: ../others/set.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 
 belt_SetInt.mli: ../others/set.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_SetString.mli: ../others/set.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 
 belt_MutableSetInt.ml: ../others/setm.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_MutableSetString.ml: ../others/setm.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 belt_MutableSetInt.mli: ../others/setm.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_MutableSetString.mli: ../others/setm.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 
 belt_SortArrayInt.ml : ../others/sort.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ >$@
+	cppo -D BS_NATIVE -D TYPE_INT $^ >$@
 belt_SortArrayString.ml : ../others/sort.cppo.ml
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ >$@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ >$@
 belt_SortArrayInt.mli : ../others/sort.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_INT $^ > $@
+	cppo -D BS_NATIVE -D TYPE_INT $^ > $@
 belt_gSortArrayString.mli : ../others/sort.cppo.mli
-	cppo -D COMPILE_TO_NATIVE -D TYPE_STRING $^ > $@
+	cppo -D BS_NATIVE -D TYPE_STRING $^ > $@
 endif	
 
 .mli.cmi:
-	COMPILE_TO_NATIVE=true $(COMPILER) $(INCLUDES) -pp $(BSPP) $(COMPFLAGS) -o $@ -c $<
+	BS_NATIVE=true $(COMPILER) $(INCLUDES) -pp $(BSPP) $(COMPFLAGS) -o $@ -c $<
 .ml.cmx:
-	COMPILE_TO_NATIVE=true $(COMPILER) $(INCLUDES) -pp $(BSPP) $(COMPFLAGS) -o $@ -c $<
+	BS_NATIVE=true $(COMPILER) $(INCLUDES) -pp $(BSPP) $(COMPFLAGS) -o $@ -c $<
 
 
 
@@ -223,4 +228,4 @@ ML_SOURCES=$(addsuffix .ml, $(SOURCE_LIST)) $(addsuffix .ml, $(LOCAL_SOURCE_LIST
 MLI_SOURCES=$(addsuffix .mli, $(SOURCE_LIST)) $(addsuffix .mli, $(LOCAL_SOURCE_LIST)) 
 
 depend:
-	COMPILE_TO_NATIVE=true $(CAMLDEP) -pp $(BSPP) -ppx $(BELT_BSPPX) -native $(INCLUDES) $(ML_SOURCES) $(MLI_SOURCES) > .depend
+	BS_NATIVE=true $(CAMLDEP) -pp $(BSPP) -ppx $(BELT_BSPPX) -native $(INCLUDES) $(ML_SOURCES) $(MLI_SOURCES) > .depend
