--- a/jscomp/bsb/templates/node/package.json
+++ b/jscomp/bsb/templates/node/package.json
@@ -12,6 +12,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "^${bsb:bs-version}"
+    "bsb-native": "^${bsb:bs-version}"
   }
 }
