--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "coveralls": "npm run-script coverage && node ./node_modules/.bin/coveralls < coverage/lcov.info",
     "postinstall": "node scripts/install.js"
   },
-  "name": "bs-platform",
+  "name": "bsb-native",
   "version": "4.0.8",
-  "description": "bucklescript compiler, ocaml standard libary by bucklescript and its required runtime support",
+  "description": "Bucklescript build systen fork to compile to native",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bucklescript/bucklescript.git"
