--- a/jscomp/runtime/Makefile
+++ b/jscomp/runtime/Makefile
@@ -2,7 +2,7 @@ include ../Makefile.shared
 
 COMPILER=../../lib/bsc.exe
 
-BS_COMMON_FLAGS= -absname -no-alias-deps -bs-no-version-header -bs-diagnose -bs-no-check-div-by-zero -bs-cross-module-opt -bs-package-name bs-platform
+BS_COMMON_FLAGS= -absname -no-alias-deps -bs-no-version-header -bs-diagnose -bs-no-check-div-by-zero -bs-cross-module-opt -bs-package-name bsb-native
 
 BS_FLAGS=  $(BS_COMMON_FLAGS) $(BS_PKG_FLAGS)
 
