--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,7 +77,7 @@ build_script:
   - bash -lc "cd /c/projects/bucklescript/vendor/ninja; python configure.py --platform=mingw; /c/projects/bucklescript/vendor/ninja/snapshot/ninja.win32"
   - bash -lc "cp /c/projects/bucklescript/vendor/ninja/ninja.exe /c/projects/bucklescript/lib/ninja.exe"
   # Create the zip
-  - bash -lc "cd /c/projects/bucklescript/ && zip -r bucklescript-win-3.2.0.zip lib vendor/ocaml/bin/ocamlrun.exe vendor/ocaml/ocamlc.opt.exe vendor/ocaml/ocamlopt.opt.exe vendor/ocaml/lib/ocaml vendor/flexdll vendor/mingw32/ vendor/lib vendor/include -x lib/bsb -x lib/bsc -x lib/bsrefmt"
+  - bash -lc "cd /c/projects/bucklescript/ && zip -r bsb-native-win-4.0.6.zip lib vendor/ocaml/bin/ocamlrun.exe vendor/ocaml/ocamlc.opt.exe vendor/ocaml/ocamlopt.opt.exe vendor/ocaml/lib/ocaml vendor/flexdll vendor/mingw32/ vendor/lib vendor/include -x lib/bsb -x lib/bsc -x lib/bsrefmt"
 
 artifacts:
   - path: bsb-native-win-4.0.6.zip
@@ -87,5 +87,5 @@ test_script:
   - git clone https://github.com/bsansouci/reprocessing-example C:\projects\bucklescript\reprocessing-example
   - bash -lc "cd /c/projects/bucklescript/reprocessing-example; npm install"
   - bash -lc "find /c/projects/bucklescript/reprocessing-example/node_modules/bs-platform -type f -not -name 'package.json' -not -name 'bsconfig.json' -not -name 'bsb' -not -name 'bsc' -not -name 'bsrefmt' -delete"
-  - bash -lc "unzip -q /c/projects/bucklescript/bucklescript-win-3.2.0.zip -d /c/projects/bucklescript/reprocessing-example/node_modules/bs-platform"
+  - bash -lc "unzip -q /c/projects/bucklescript/bsb-native-win-4.0.6.zip -d /c/projects/bucklescript/reprocessing-example/node_modules/bs-platform"
   - bash -lc "cd /c/projects/bucklescript/reprocessing-example; ./node_modules/bs-platform/lib/bsb.exe -make-world || cat lib/bs/bytecode/build.ninja"
