--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cover": "istanbul cover --report html ./node_modules/.bin/_mocha --   ./jscomp/test/**/*test.js && open coverage/index.html",
     "coverage": "istanbul cover ./node_modules/.bin/_mocha --report lcovonly --  './jscomp/test/*test.js'",
     "coveralls": "npm run-script coverage && node ./node_modules/.bin/coveralls < coverage/lcov.info",
-    "postinstall": "node scripts/install.js native"
+    "postinstall": "BS_ALWAYS_BUILD_YOUR_COMPILER=true node scripts/install.js native"
   },
   "name": "bsb-native",
   "version": "4.0.7",
