Add belt_byte artifacts + update gitignore to hide belt_native ones.

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,10 @@ jscomp/build_tests/*/lib/
 bin/ninja.exe
 tmp/
 notes.md
+
+# bsb-native specific things
+jscomp/belt_native/*.ml*
+!jscomp/belt_native/caml_hash.ml
+!jscomp/belt_native/test.ml
+vendor/ocaml/lib
+vendor/ocaml/bin
